--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/antlr-2.7.6.jar"/>
 	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/appengine-api-1.0-sdk-1.2.8.jar"/>
 	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/appengine-api-labs-1.2.8.jar"/>
@@ -38,5 +37,15 @@
 	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/spring-test.jar"/>
 	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/hibernate-validator-4.0.2.GA.jar"/>
 	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/validation-api-1.0.0.GA.jar"/>
-	<classpathentry kind="output" path="war/WEB-INF/classes"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
