--- a/war/jdbc.properties
+++ b/war/jdbc.properties
@@ -1,4 +1,4 @@
 database.url=jdbc:mysql://localhost/STOCKS
 database.driver=com.mysql.jdbc.Driver
 database.user=root
-database.password=
+database.password=ceritek93
