--- a/.classpath
+++ b/.classpath
@@ -3,40 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/antlr-2.7.6.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/appengine-api-1.0-sdk-1.2.8.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/appengine-api-labs-1.2.8.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/asm-2.2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/asm-commons-2.2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/aspectjtools-1.5.4.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/cglib-nodep-2.1_3.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/commons-collections.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/commons-logging.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/datanucleus-appengine-1.0.4.final.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/datanucleus-core-1.1.5.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/datanucleus-jpa-1.1.5.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/geronimo-jpa_3.0_spec-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/geronimo-jta_1.1_spec-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/gwt-servlet.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/hibernate3.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/jdo2-api-2.3-eb.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/jta.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/log4j-1.2.14.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/mysql-connector-java-3.1.12-bin.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/slf4j-api-1.5.0.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/slf4j-log4j12-1.5.0.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/spring.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/spring4gwt-0.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/spring-aspects.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/spring-mock.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/spring-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/spring-web.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/spring-webmvc.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/junit-4.4.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/spring-test.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/hibernate-validator-4.0.2.GA.jar"/>
-	<classpathentry kind="lib" path="C:/Java EE/apps/StockWatcher/war/WEB-INF/lib/validation-api-1.0.0.GA.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/datanucleus-appengine-1.0.4.final.jar.zip"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-servlet.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -47,5 +15,5 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="output" path="target/classes"/>
+	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
